# thesis_code

./: .gitignore  AGENTS.md  BENCHMARK_PROTOCOL_6_2.md  IMPLEMENTATION_ROADMAP_6_2.md  PROJECT_BRIEF.md  README.md  README_6_2.md  REPRODUCIBILITY_STANDARD_6_2.md  main.tex  pyproject.toml
configs/: gbm_benchmark.yaml  gbm_es95.yaml
deep_hedging/: __init__.py
figures/: adversarial_baseline_hedger.pt  adversarial_robustness.json  decomposition_closed.json  diagnostic_controls_results.json  gbm_pretrained_hedger.pt  h2_extended_grid_table.tex  h2_grid_extension.json  h_sweep_bootstrap_table.tex  h_sweep_results.json  h_sweep_table.tex  lean_h4_H0.02.json  lean_h4_H0.02_pnl.pt  lean_h4_H0.25.json  lean_h4_H0.25_pnl.pt  lean_h4_sweep_summary.json  lean_h4_table.tex  pareto_A_n100_cost0.001_bs_pnl.pt  pareto_A_n100_cost0.001_deep_pnl.pt  pareto_A_n100_cost0.002_bs_pnl.pt  pareto_A_n100_cost0.002_deep_pnl.pt  pareto_A_n100_cost0.0_bs_pnl.pt  pareto_A_n100_cost0.0_deep_pnl.pt  pareto_A_n200_cost0.001_bs_pnl.pt  pareto_A_n200_cost0.001_deep_pnl.pt  pareto_A_n200_cost0.002_bs_pnl.pt  pareto_A_n200_cost0.002_deep_pnl.pt  pareto_A_n200_cost0.0_bs_pnl.pt  pareto_A_n200_cost0.0_deep_pnl.pt  pareto_A_n50_cost0.001_bs_pnl.pt  pareto_A_n50_cost0.001_deep_pnl.pt  pareto_A_n50_cost0.002_bs_pnl.pt  pareto_A_n50_cost0.002_deep_pnl.pt  pareto_A_n50_cost0.0_bs_pnl.pt  pareto_A_n50_cost0.0_deep_pnl.pt  pareto_B_bs_pnl.pt  pareto_B_es_a0.50_pnl.pt  pareto_B_es_a0.90_pnl.pt  pareto_B_es_a0.95_pnl.pt  pareto_B_es_a0.99_pnl.pt  pareto_B_mse_pnl.pt  (+13 more)
latex_package/: main.tex  references.bib
(+95 files in other folders)
